--- a/TGL/TGL.WebApp/appsettings.Development.json
+++ b/TGL/TGL.WebApp/appsettings.Development.json
@@ -1,9 +1,4 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  }
+  "Nombre": "Andrés Londoño",
+  "Saludo": "Holi! desde Development"
 }
