implemented computers module

--- a/TGL/TGL.WebApp/TGL.WebApp.csproj
+++ b/TGL/TGL.WebApp/TGL.WebApp.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <Folder Include="Properties\" />
+    <Folder Include="Pages\Computers\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="Properties\launchSettings.json" />
