--- a/TGL/TGL.WebApp/appsettings.Development.json
+++ b/TGL/TGL.WebApp/appsettings.Development.json
@@ -2,6 +2,6 @@
   "Nombre": "Andrés Londoño",
   "Saludo": "Holi! desde Development",
   "ConnectionStrings": {
-    "TglSQL": "Server=tcp:team-tgl-server.database.windows.net,1433;Initial Catalog=team-tgl-andreslon;Persist Security Info=False;User ID=tgl;Password=@medellin123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "TglSQL": "Server=137.116.119.185,1433;Initial Catalog=team-andreslon;Persist Security Info=False;User ID=tgl;Password=@medellin123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   }
 }
