--- a/TGL/TGL.WebApp/appsettings.Development.json
+++ b/TGL/TGL.WebApp/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "Nombre": "Andrés Londoño",
+  "Nombre": "Andres Londono",
   "Saludo": "Holi! desde Development",
   "ConnectionStrings": {
     "TglSQL": "Server=137.116.119.185,1433;Initial Catalog=team-andreslon;Persist Security Info=False;User ID=tgl;Password=@medellin123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
